<resources>
    <string name="app_name" translatable="false">OBilet</string>
    <string name="okay">Tamam</string>
    <string name="bus_tab_label">Otobüs Bileti</string>
    <string name="flight_tab_label">Uçak Bileti</string>
    <string name="origin_label">Nereden</string>
    <string name="destination_label">Nereye</string>
    <string name="date_label">Tarih</string>
    <string name="today">Bugün</string>
    <string name="tomorrow">Yarın</string>
    <string name="find_ticket_button_label">Bileti Bul</string>
    <string name="departure_label">Gidiş</string>
    <string name="return_label">Dönüş</string>
    <string name="add_passenger">Yolcu Ekle</string>
    <string name="lorem_ipsum" translatable="false">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="try_again">Tekrar Dene</string>
    <string name="flight_section_month_and_day" translatable="false">%1$s\n%2$s</string>
    <string name="add_return_date">Dönüş Ekle</string>
    <string name="flight_passenger_adult">%1$s YETİŞKİN</string>
    <string name="passenger">YOLCU</string>
    <string name="see_on_the_map">Haritada Gör</string>
    <string name="origin_and_destination_can_not_be_the_same">Başlangıç ve bitiş yönleri aynı seçilemez.\nLütfen farklı bir lokasyon seçiniz.</string>
    <string name="cancel">İptal Et</string>
    <string name="search">Ara</string>
    <string name="review">İncele</string>
    <string name="buy_ticket">Bilet Al</string>
    <string name="close">Kapat</string>
</resources>