<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!--region Origin -->

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/originCV"
            style="@style/Theme.OBilet.FilterCardStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp">

                <ImageView
                    android:id="@+id/originLocationIv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_location_outline"
                    app:layout_constraintBottom_toBottomOf="@+id/originTv"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/originTv"
                    app:tint="@color/icon_primary_color" />

                <TextView
                    android:id="@+id/originLabelTv"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/nunito_bold"
                    android:text="@string/origin_label"
                    android:textColor="@color/primary_color"
                    app:layout_constraintStart_toEndOf="@id/originLocationIv"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/originTv"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/nunito_medium"
                    android:textColor="@color/primary_text_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/originLabelTv"
                    app:layout_constraintTop_toBottomOf="@id/originLabelTv"
                    tools:text="İstanbul Avrupa" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <!-- endregion -->

        <!--region Destination -->

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/destinationCV"
            style="@style/Theme.OBilet.FilterCardStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="@+id/originCV"
            app:layout_constraintStart_toStartOf="@+id/originCV"
            app:layout_constraintTop_toBottomOf="@+id/originCV">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp">

                <ImageView
                    android:id="@+id/destinationLocationIv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_location"
                    app:layout_constraintBottom_toBottomOf="@+id/destinationTv"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/destinationTv"
                    app:tint="@color/icon_primary_color" />

                <TextView
                    android:id="@+id/destinationLabelTv"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/nunito_bold"
                    android:text="@string/destination_label"
                    android:textColor="@color/primary_color"
                    app:layout_constraintStart_toEndOf="@id/destinationLocationIv"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/destinationTv"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/nunito_medium"
                    android:textColor="@color/primary_text_color"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/destinationLabelTv"
                    app:layout_constraintTop_toBottomOf="@id/destinationLabelTv"
                    tools:text="Ankara" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>


        <!-- endregion -->

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/switchDirectionsCv"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="12dp"
            android:backgroundTint="#88FFFFFF"
            app:cardElevation="8dp"
            app:layout_constraintBottom_toTopOf="@id/destinationCV"
            app:layout_constraintEnd_toEndOf="@id/originCV"
            app:layout_constraintTop_toBottomOf="@id/originCV"
            app:strokeColor="@color/primary_text_color"
            app:strokeWidth="1dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/switchDirectionsBtn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@android:color/transparent"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetRight="0dp"
                android:insetBottom="0dp"
                app:icon="@drawable/ic_swap"
                app:iconGravity="textStart"
                app:iconPadding="0dp"
                app:iconTint="@color/primary_text_color"
                app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.OBilet.Button.Rounded" />
        </com.google.android.material.card.MaterialCardView>


        <!-- region Date -->

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/dateCV"
            style="@style/Theme.OBilet.FilterCardStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="@id/destinationCV"
            app:layout_constraintStart_toStartOf="@id/destinationCV"
            app:layout_constraintTop_toBottomOf="@id/destinationCV">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <ImageView
                    android:id="@+id/dateIv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_calendar"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/icon_primary_color" />

                <TextView
                    android:id="@+id/departureLabelTv"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/nunito_bold"
                    android:text="@string/departure_label"
                    android:textColor="@color/primary_color"
                    app:layout_constraintStart_toEndOf="@id/dateIv"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/dayOfMonthTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_semi_bold"
                    android:textColor="@color/primary_text_color"
                    android:textSize="28sp"
                    app:layout_constraintStart_toStartOf="@id/departureLabelTv"
                    app:layout_constraintTop_toBottomOf="@id/departureLabelTv"
                    tools:text="18" />

                <TextView
                    android:id="@+id/monthAndDayTv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/nunito_regular"
                    android:textColor="@color/primary_text_color"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@+id/dayOfMonthTv"
                    app:layout_constraintEnd_toStartOf="@+id/dateDivider"
                    app:layout_constraintStart_toEndOf="@id/dayOfMonthTv"
                    app:layout_constraintTop_toTopOf="@id/dayOfMonthTv"
                    tools:text="Kasım\nPazartesi" />

                <View
                    android:id="@+id/dateDivider"
                    android:layout_width="1dp"
                    android:layout_height="0dp"
                    android:background="@color/divider_color"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/returnLabelTv"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/nunito_bold"
                    android:text="@string/return_label"
                    android:textColor="@color/primary_color"
                    app:layout_constraintStart_toEndOf="@id/dateDivider"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/returnDayOfMonthTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_semi_bold"
                    android:textColor="@color/primary_text_color"
                    android:textSize="28sp"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="@id/returnLabelTv"
                    app:layout_constraintTop_toBottomOf="@id/returnLabelTv"
                    tools:text="18" />

                <TextView
                    android:id="@+id/returnMonthAndDayTv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/nunito_regular"
                    android:textColor="@color/primary_text_color"
                    android:textSize="12sp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@+id/returnDayOfMonthTv"
                    app:layout_constraintEnd_toStartOf="@id/addOrRemoveBtn"
                    app:layout_constraintStart_toEndOf="@id/returnDayOfMonthTv"
                    app:layout_constraintTop_toTopOf="@id/returnDayOfMonthTv"
                    tools:text="Kasım\nPazartesi" />

                <TextView
                    android:id="@+id/addReturnTv"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_semi_bold"
                    android:text="@string/add_return_date"
                    android:textColor="@color/primary_text_color"
                    app:layout_constraintEnd_toStartOf="@+id/addOrRemoveBtn"
                    app:layout_constraintStart_toStartOf="@+id/returnLabelTv"
                    app:layout_constraintTop_toBottomOf="@id/returnLabelTv" />

                <ImageView
                    android:id="@+id/addOrRemoveBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_add"
                    android:padding="8dp"
                    android:clickable="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/icon_secondary_color"
                    android:focusable="true" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

        <!-- endregion -->


        <!-- region Passenger -->

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/passengerCv"
            style="@style/Theme.OBilet.FilterCardStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="@+id/dateCV"
            app:layout_constraintStart_toStartOf="@+id/dateCV"
            app:layout_constraintTop_toBottomOf="@+id/dateCV">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp">


                <ImageView
                    android:id="@+id/passengerIv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_person"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/icon_primary_color" />

                <TextView
                    android:id="@+id/passengerTv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="8dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/nunito_bold"
                    android:maxLines="1"
                    android:textColor="@color/primary_text_color"
                    app:layout_constraintBottom_toBottomOf="@id/passengerIv"
                    app:layout_constraintEnd_toStartOf="@+id/addPassengerTv"
                    app:layout_constraintStart_toEndOf="@id/passengerIv"
                    app:layout_constraintTop_toTopOf="@id/passengerIv"
                    tools:text="1 YETİŞKİN" />

                <TextView
                    android:id="@+id/addPassengerTv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunito_regular"
                    android:text="@string/add_passenger"
                    android:textColor="@color/primary_text_color_with_half_opacity"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
        <!-- endregion -->

        <com.google.android.material.button.MaterialButton
            android:id="@+id/findTicketBtn"
            style="@style/Theme.OBilet.FindTicketButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="64dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="64dp"
            android:text="@string/find_ticket_button_label"
            app:layout_constraintEnd_toEndOf="@+id/passengerCv"
            app:layout_constraintStart_toStartOf="@+id/passengerCv"
            app:layout_constraintTop_toBottomOf="@+id/passengerCv" />


        <TextView
            android:id="@+id/infoTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:fontFamily="@font/nunito_medium"
            android:gravity="center"
            android:text="@string/lorem_ipsum"
            android:textColor="@color/primary_text_color_with_half_opacity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/findTicketBtn" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>